# kinde-rs

./: Cargo.toml  README.md  git_push.sh
.openapi-generator/: FILES
docs/: AddApisRequest.md  AddOrganizationUsersRequest.md  AddOrganizationUsersRequestUsersInner.md  AddOrganizationUsersResponse.md  Api.md  ApiApplicationsInner.md  ApiResult.md  Apis.md  ApisApi.md  Applications.md  ApplicationsApi.md  BusinessApi.md  CallbacksApi.md  ConnectedAppsAccessToken.md  ConnectedAppsApi.md  ConnectedAppsAuthUrl.md  CreateApplicationRequest.md  CreateApplicationResponse.md  CreateApplicationResponseApplication.md  CreateFeatureFlagRequest.md  CreateOrganizationRequest.md  CreateOrganizationResponse.md  CreateOrganizationResponseOrganization.md  CreateOrganizationUserPermissionRequest.md  CreateOrganizationUserRoleRequest.md  CreatePermissionRequest.md  CreateRoleRequest.md  CreateSubscriberSuccessResponse.md  CreateSubscriberSuccessResponseSubscriber.md  CreateUserRequest.md  CreateUserRequestIdentitiesInner.md  CreateUserRequestIdentitiesInnerDetails.md  CreateUserRequestProfile.md  CreateUserResponse.md  EnvironmentsApi.md  Error.md  ErrorResponse.md  FeatureFlagsApi.md  GetApplicationResponse.md  GetApplicationResponseApplication.md  (+63 more)
src/apis/: apis_api.rs  applications_api.rs  business_api.rs  callbacks_api.rs  configuration.rs  connected_apps_api.rs  environments_api.rs  feature_flags_api.rs  industries_api.rs  mod.rs  o_auth_api.rs  organizations_api.rs  permissions_api.rs  roles_api.rs  subscribers_api.rs  timezones_api.rs  users_api.rs
src/models/: api.rs  apis.rs  (+87 more)
